# animation-editor

./: CMakeLists.txt  README.md
Include/: Application.hpp  Button.hpp  FontStorage.hpp  InitialParametrs.hpp  InputWindow.hpp  Label.hpp  Line.hpp  Point.hpp  Rectangle.hpp  SceneNode.hpp  UserInput.hpp  Utility.hpp  WorkFlow.hpp
Source/: Application.cpp  Button.cpp  FontStorage.cpp  InputWindow.cpp  Label.cpp  Line.cpp  Main.cpp  Point.cpp  Rectangle.cpp  SceneNode.cpp  UserInput.cpp  Utility.cpp  WorkFlow.cpp
